2011-07-24    <warmerdam@pobox.com>

	* shpopen.c, dbfopen.c, shptree.c, shapefil.h: Minimize use of 
	CPL services in favor of SAHooks.Error(). 

	* Makefile: Remove all the shared library building stuff, it is just
	too half assed, and results in all sorts of bug reports and complaints.
	Instead just install a static libshp.a.

2011-07-23    <warmerdam@pobox.com>

	* Makefile: build shpdumptree as part of all target (#1648).

	* shpopen.c: fix memory leaks in error cases (#2061)

	* contrib/*.c: Include stdlib.h and strings.h (#2146)

	* shpdump.c: change to use %.15g for coordinate reporting. (#2277)

2011-05-13  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c, shapelib.h: Add functions to reorder and alter
	field definitions.  DBFReorderFields() and DBFAlterFields().

2011-05-07  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Ensure pending record is flushed when adding a native
	field (gdal #4073).

2011-04-16  Frank Warmerdam  <warmerdam@pobox.com>

	* shapefil.h: avoid warnings with SHP_CVSID on gcc.

2010-12-06  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: fix read past end of init data fetching code page 
	http://bugzilla.maptools.org/show_bug.cgi?id=2276

2010-07-01  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: do not error out on a shape with zero vertices.

	* shpdump.c: do not crash if null shape returned by read object.

2010-06-29  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c: fix sign of Z and M comparisons in SHPCheckObjectContained.
	(http://bugzilla.maptools.org/show_bug.cgi?id=2223)

2010-01-28  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c/shapefil.h: Handle the .shp file length limits more
	gracefully. (http://trac.osgeo.org/gdal/ticket/3236)

	* shpopen.c: Improve the numerical accurancy of algorithms in
	SHPRewind() (http://trac.osgeo.org/gdal/ticket/3363).

2010-01-16  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: support passing in zero/nulls to create an empty